--- a/DevFramework/DevFramework.Nortwind.MvcWebUI/Views/Product/Index.cshtml
+++ b/DevFramework/DevFramework.Nortwind.MvcWebUI/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DevFramework.Northwind.MvcWebUI.Models.ProductListViewModel
+﻿@model DevFramework.Nortwind.MvcWebUI.Models.ProductListViewModel
 
 @{ Layout = null; }
 
