--- a/MemberRegistration/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
+++ b/MemberRegistration/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
@@ -6,68 +6,47 @@
         <main>
             <div class="py-5 text-center">
                 <h2>Kayıt Sayfası</h2>
-                <p class="lead">Below is an example form built entirely with Bootstrap’s form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+                <p class="lead">Lütfen bilgilerinizi giriniz</p>
             </div>
 
             <div class="row g-5">
                 
-                <div class="col-md-7 col-lg-8">
+                <div class="col-md-12 col-lg-12">
                     <h4 class="mb-3">Billing address</h4>
                     <form class="needs-validation" novalidate>
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <label for="firstName" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid first name is required.
-                                </div>
+                                <label for="firstName" class="form-label">Adınız</label>
+                                <input type="text" class="form-control" name="firstName" id="firstName" placeholder="" value="" >
                             </div>
 
-                            <div class="col-sm-6">
-                                <label for="lastName" class="form-label">Last name</label>
-                                <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-                                <div class="invalid-feedback">
-                                    Valid last name is required.
-                                </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="lastName" class="form-label">Soyadınız</label>
+                                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="" value="" >
                             </div>
 
                             <div class="col-12">
-                                <label for="username" class="form-label">Username</label>
+                                <label for="TcIdentityNo" class="form-label">Tc Kimlik Numarası</label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text"></span>
-                                    <input type="text" class="form-control" id="username" placeholder="Username" required>
-                                    <div class="invalid-feedback">
-                                        Your username is required.
-                                    </div>
+                                    <input type="text" class="form-control" name="TcIdentityNo" id="TcIdentityNo" placeholder="Tc Kimlik Numarası">
                                 </div>
                             </div>
 
                             <div class="col-12">
                                 <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                                <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                                <div class="invalid-feedback">
-                                    Please enter a valid email address for shipping updates.
-                                </div>
+                                <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
                             </div>
 
                             <div class="col-12">
-                                <label for="address" class="form-label">Address</label>
-                                <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                                <div class="invalid-feedback">
-                                    Please enter your shipping address.
-                                </div>
+                                <label for="address" class="form-label">Doğum Tarihi</label>
+                                <input type="text" class="form-control" id="DateOfBirth" name="DateOfBirth" placeholder="19/05/1993">
                             </div>
-
-                            <div class="col-12">
-                                <label for="address2" class="form-label">Address 2 <span class="text-muted">(Optional)</span></label>
-                                <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                            </div>
-
                                   
                         </div>
                         <hr class="my-4">
 
-                        <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+                        <button class="w-100 btn btn-primary btn-lg" type="submit">Kayıt Ol</button>
                     </form>
                 </div>
             </div>
