--- a/MemberRegistration/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
+++ b/MemberRegistration/MemberRegistration.MvcWebUI/Views/Member/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model dynamic
+﻿@model  MemberRegistration.MvcWebUI.Models.MemberAddViewModel
 
 <body class="bg-light">
 
@@ -13,39 +13,40 @@
 
                 <div class="col-md-12 col-lg-12">
                     <h4 class="mb-3">Billing address</h4>
-                    <form class="needs-validation" novalidate>
+                    @using (Html.BeginForm())
+                    {
                         <div class="row g-3">
                             <div class="col-sm-6">
-                                <label for="firstName" class="form-label">Adınız</label>
-                                <input type="text" class="form-control" name="firstName" id="firstName" placeholder="" value="">
+                                <label for="firstName" class="form-label"></label>
+                                <input type="text" class="form-control" name="member.firstName" id="firstName" placeholder="" value="">
                             </div>
 
                             <div class="col-md-6 mb-3">
-                                <label for="lastName" class="form-label">Soyadınız</label>
-                                <input type="text" class="form-control" id="lastName" name="lastName" placeholder="" value="">
+                                <label for="lastName" class="form-label"></label>
+                                <input type="text" class="form-control" id="lastName" name="member.lastName" placeholder="" value="">
                             </div>
 
                             <div class="col-12">
-                                <label for="TcIdentityNo" class="form-label">Tc Kimlik Numarası</label>
+                                <label for="TcIdentityNo" class="form-label"></label>
                                 <div class="input-group has-validation">
                                     <span class="input-group-text"></span>
-                                    <input type="text" class="form-control" name="TcIdentityNo" id="TcIdentityNo" placeholder="Tc Kimlik Numarası">
+                                    <input type="text" class="form-control" name="member.TcIdentityNo" id="TcIdentityNo" placeholder="Tc Kimlik Numarası">
                                 </div>
                             </div>
 
                             <div class="col-12">
-                                <label for="email" class="form-label">Email <span class="text-muted">(Optional)</span></label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="you@example.com">
+                                <label for="email" class="form-label"><span class="text-muted"></span></label>
+                                <input type="email" class="form-control" id="email" name="member.EmailAddress" placeholder="you@example.com">
                             </div>
 
                             <div class="col-12">
-                                <label for="address" class="form-label">Doğum Tarihi</label>
-                                <input type="text" class="form-control" id="DateOfBirth" name="DateOfBirth" placeholder="19/05/1993">
+                                <label for="address" class="form-label"></label>
+                                <input type="text" class="form-control" id="DateOfBirth" name="member.DateOfBirth" placeholder="19/05/1993">
                             </div>
                         </div>
                         <hr class="my-4">
                         <button class="w-100 btn btn-primary btn-lg" type="submit">Kayıt Ol</button>
-                    </form>
+                    }
                 </div>
             </div>
         </main>
